--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <!-- Importando Estilo-->
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./global.css">
 </head>
 <body>
-    <header>
-        <div><a href="index.html">we<span>love</span>dogs</a></div>
+    <header class="container">
+        <h1><a href="index.html">we<span>love</span>dogs</a></h1>
         <nav>
             <a href="./pages/quemsomos.html" class="nav-link">QUEM SOMOS</a>
             <a href="./pages/blog.html" class="nav-link" id="link-blog">BLOG</a>
@@ -24,8 +25,7 @@
             <p>Junte-se a comunidade apaixonada por cachorros</p>
             <a href="./pages/inscricao.html"><button id="btn-inscrever-se">Inscrever-se</button></a>
         </div>
-        <div><img src="./images/Figure1.jpg"></div>
-        
+        <div><img src="./images/Figure1.jpg" alt="Pessoa brincando com cachorro "></div>
     </main>
 </body>
 </html>
