--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,10 +8,11 @@
     <!-- Importando Estilo-->
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/blog.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <body>
-    <header>
-        <div><a href="../index.html">we<span>love</span>dogs</a></div>
+    <header class="container">
+        <h1><a href="../index.html">we<span>love</span>dogs</a></h1>
         <nav>
             <a href="./quemsomos.html" class="nav-link">QUEM SOMOS</a>
             <a href="./blog.html" class="nav-link" id="link-blog">BLOG</a>
