--- a/pages/inscricao.html
+++ b/pages/inscricao.html
@@ -8,6 +8,7 @@
     <!-- Importando Estilo e alterando botão da Navbar -->
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/inscricao.css">
+    <link rel="stylesheet" href="../global.css">
     <style>
         #btn-inscrever{
             background-color: #7ED321;
@@ -16,12 +17,12 @@
     </style>
 </head>
 <body>
-    <header>
-        <div><a href="index.html">we<span>love</span>dogs</a></div>
+    <header class="container">
+        <h1><a href="../index.html">we<span>love</span>dogs</a></h1>
         <nav>
-            <a href="quemsomos.html" class="nav-link">QUEM SOMOS</a>
-            <a href="blog.html" class="nav-link" id="link-blog">BLOG</a>
-            <a href="inscricao.html" id="btn-inscrever">INSCREVER</a>
+            <a href="./quemsomos.html" class="nav-link">QUEM SOMOS</a>
+            <a href="./blog.html" class="nav-link" id="link-blog">BLOG</a>
+            <a href="./inscricao.html" id="btn-inscrever">INSCREVER</a>
         </nav>
     </header>
 
