--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -8,14 +8,15 @@
     <!-- Importando Estilo-->
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/quemsomos.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <body>
-    <header>
-        <div><a href="index.html">we<span>love</span>dogs</a></div>
+    <header class="container">
+        <h1><a href="../index.html">we<span>love</span>dogs</a></h1>
         <nav>
-            <a href="quemsomos.html" class="nav-link">QUEM SOMOS</a>
-            <a href="blog.html" class="nav-link" id="link-blog">BLOG</a>
-            <a href="inscricao.html" id="btn-inscrever">INSCREVER</a>
+            <a href="./quemsomos.html" class="nav-link">QUEM SOMOS</a>
+            <a href="./blog.html" class="nav-link" id="link-blog">BLOG</a>
+            <a href="./inscricao.html" id="btn-inscrever">INSCREVER</a>
         </nav>
     </header>
 
