--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <div>
             <p>Junte-se a comunidade apaixonada por cachorros</p>
             <a href="./pages/inscricao.html"><button id="btn-inscrever-se">Inscrever-se</button></a>
         </div>
-        <div><img src="./images/Figure1.jpg" alt="Pessoa brincando com cachorro "></div>
+        <img src="./images/Figure1.jpg" alt="Pessoa brincando com cachorro ">
     </main>
 </body>
 </html>
