--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -23,13 +23,9 @@
     <main>
         <div>
             <h1 class="titulo-pag">QUEM SOMOS</h1>
-        </div>
-        <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.  Quam elementum pulvinar etiam non quam lacus. Viverra tellus in hac habitasse platea. Congue eu consequat ac felis donec et odio. Amet cursus sit amet dictum sit amet. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Consectetur a erat nam at.</p>
         </div>
-        <div id="img-quem-somos">
-            <img src="../images/Figure2.jpg" alt="">
-        </div>
+        <img id="img-quem-somos" src="../images/Figure2.jpg" alt="">
     </main>
 </body>
 </html>
