--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,18 +21,16 @@
     </header>
 
     <main>
-        <div>
-            <h1 class="titulo-pag">Blog</h1>
-        </div>
+        <h1 class="titulo-pag">Blog</h1>
         <div class="blog-block">
-            <div><img src="../images/Figure3.jpg" alt=""></div>
+            <img src="../images/Figure3.jpg" alt="Person Reading">
             <div class="block-content">
                 <h2>Título do post</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.</p>
             </div>
         </div>
         <div class="blog-block">
-            <div><img src="../images/Figure4.jpg" alt=""></div>
+            <img src="../images/Figure4.jpg" alt="Woman peting dog">
             <div class="block-content">
                 <h2>Título do post</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At quis risus sed vulputate odio ut enim blandit volutpat. Urna duis convallis convallis tellus id interdum velit laoreet id. Sed felis eget velit aliquet sagittis id consectetur purus ut. Orci phasellus egestas tellus rutrum tellus. At elementum eu facilisis sed.</p>
