inscricao.html responsive

--- a/pages/inscricao.html
+++ b/pages/inscricao.html
@@ -53,9 +53,7 @@
                     <button id="btn-enviar">Enviar</button>
                 </div>
             </form>
-            <div>
-                <img src="../images/Figure5.jpg" alt="">
-            </div>
+            <img src="../images/Figure5.jpg" alt="Person with big heart">
         </div>
     </main>
 </body>
